--- a/client/new.html
+++ b/client/new.html
@@ -1,5 +1,23 @@
 <template name="new">
-  <div class="well">
-  	<h1>Drop images here</h1>
-  </div>
+    <header>
+        <div class="header-content drop">
+            <div class="header-content-inner">
+                <h1>Free, no bullshit image hosting</h1>
+                <p>Backed by Cloudflare, Cloudfront and Amazon S3</p>
+                <button class="btn btn-default btn-xl">Drop files here</button>
+            </div>
+        </div>
+    </header>
+
+    <section class="bg-primary drop" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">We've got what you need!</h2>
+                    <hr class="light">
+                    <button class="btn btn-default btn-xl">Drop files here</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
