--- a/client/layout.html
+++ b/client/layout.html
@@ -20,7 +20,7 @@
                     </li>
                     {{#if currentUser}}
 	                    <li>
-	                        <a class="page-scroll" href="/">Start</a>
+	                        <a class="page-scroll" href="{{pathFor 'albums'}}">My albums</a>
 	                    </li>
 	                {{/if}}
 					{{> loginButtons }}
