--- a/client/new.html
+++ b/client/new.html
@@ -4,6 +4,7 @@
             <div class="header-content-inner">
                 <h1>Free, no bullshit image hosting</h1>
                 <p>Backed by Cloudflare, Cloudfront and Amazon S3</p>
+                <p>Max image size 10MB</p>
                 <button class="btn btn-default btn-xl">Drop files here</button>
             </div>
         </div>
