--- a/client/new.html
+++ b/client/new.html
@@ -5,7 +5,9 @@
                 <h1>Free, no bullshit image hosting</h1>
                 <p>Backed by Cloudflare, Cloudfront and Amazon S3</p>
                 <p>Max image size 10MB</p>
-                <button class="btn btn-default btn-xl">Drop files here</button>
+				<span class="file-input btn btn-default btn-xl btn-file">
+					Drop files here <input type="file" multiple>
+				</span>
             </div>
         </div>
     </header>
