--- a/client/new.html
+++ b/client/new.html
@@ -6,7 +6,8 @@
                 <p>Backed by Cloudflare, Cloudfront and Amazon S3</p>
                 <p>Max image size 10MB</p>
 				<span class="file-input btn btn-default btn-xl btn-file">
-					Drop files here <input type="file" multiple>
+					Drop files here 
+                    <input type="file" multiple accept=".jpg,.jpeg,.gif,.png">
 				</span>
             </div>
         </div>
