new intro header

--- a/client/new.html
+++ b/client/new.html
@@ -4,7 +4,7 @@
             <div class="header-content-inner">
                 <h1>Free, no bullshit image hosting</h1>
                 <p>Backed by Cloudflare, Cloudfront and Amazon S3</p>
-                <p>Max image size 10MB</p>
+                <p>Max image size 10MB, all EXIF data stripped</p>
 				<span class="file-input btn btn-default btn-xl btn-file">
 					Drop files here 
                     <input type="file" multiple accept=".jpg,.jpeg,.gif,.png">
