--- a/client/albums.html
+++ b/client/albums.html
@@ -10,10 +10,12 @@
         </div>
     </section>
 
-	<div class="container row">
-    {{#each albums}}
-    	{{>albumsSingle}}
-    {{/each}}
+	<div class="container">
+        <div class="row">
+            {{#each albums}}
+                {{>albumsSingle}}
+            {{/each}}
+        </div>
     </div>
 </template>
 
