--- a/client/album.html
+++ b/client/album.html
@@ -11,7 +11,7 @@
 <template name="albumImage">
 	<div class="">
 		{{#with image id}}
-			<a href="//i.gurf.at/{{this.s3}}"><img src="http://i.gurf.at/{{this.s3}}" class="img-responsive center-block"></a>
+			<a href="//i.gurf.at/{{this.s3}}"><img src="//i.gurf.at/{{this.s3}}" class="img-responsive center-block"></a>
 			
 		{{/with}}
 		<p>{{text}}</p>
